--- a/frontend/src/app/pages/auth/register/register.page.html
+++ b/frontend/src/app/pages/auth/register/register.page.html
@@ -23,6 +23,9 @@
         <div padding>
           <ion-button  size="large" type="submit" [disabled]="form.invalid" expand="block">Register</ion-button>
         </div>
+        <div padding>
+          <ion-button (click)="login()">Login</ion-button>
+        </div>
       </ion-col>
     </ion-row>
   </ion-grid>
