added guards, started css

--- a/frontend/src/app/dashboard/dashboard.html
+++ b/frontend/src/app/dashboard/dashboard.html
@@ -1,5 +1,9 @@
 
 <ion-content>
-    <p>dashboard</p>
-    <ion-router-outlet id="dashboard-content" ></ion-router-outlet>
+    <div id="dashboard-header">
+        <h2>Dashboard</h2>
+    </div>
+    <div id="dashboard-content" >
+        <ion-router-outlet></ion-router-outlet>
+    </div>
 </ion-content>
