Adding blank webview

--- a/frontend/src/app/submission/submission.html
+++ b/frontend/src/app/submission/submission.html
@@ -1,4 +1,4 @@
-<ion-content>
+<ion-content padding>
     <form (ngSubmit)="login()">
         <ion-item>
             <ion-label>Message</ion-label>
@@ -7,3 +7,5 @@
         <button ion-button type="submit" block>Submit   </button>
     </form>
 </ion-content>
+
+
