--- a/frontend/src/app/dashboard/dashboard.html
+++ b/frontend/src/app/dashboard/dashboard.html
@@ -1,9 +1,19 @@
 
+
+<!-- <h2 id="dashboard-header">Dashboard</h2>
+<ion-router-outlet id="dashboard-content"></ion-router-outlet> -->
 <ion-content>
-    <div id="dashboard-header">
-        <h2>Dashboard</h2>
-    </div>
-    <div id="dashboard-content" >
-        <ion-router-outlet></ion-router-outlet>
-    </div>
+    <ion-row>
+        <ion-col size="12">
+            <ion-item>
+              <ion-label>DASHBOAD COMPONENT</ion-label>
+            </ion-item>
+          </ion-col>
+    </ion-row>
+    <ion-row>
+        <ion-col size="12">
+            <ion-router-outlet></ion-router-outlet>
+          </ion-col>
+    </ion-row>
 </ion-content>
+
