--- a/frontend/src/app/dashboard/dashboard.scss
+++ b/frontend/src/app/dashboard/dashboard.scss
@@ -1,18 +1,7 @@
-ion-content {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 20% 1fr;
-    grid-template-areas: "header" 
-                        "mainContent";
-
-    #dashboard-header {
-        grid-area: header;
-        display: flex;
-    }
-
-    #dashboard-content {
-        grid-area: mainContent;
-        display: flex;
-    }
+#dashboard-header {
+    height: 20%;
 }
 
+#dashboard-content {
+    margin-top: 20%;
+}
