--- a/frontend/src/app/pages/layout/layout.page.html
+++ b/frontend/src/app/pages/layout/layout.page.html
@@ -8,7 +8,7 @@
 
     <ion-tab-button>
       <ion-icon></ion-icon>
-      <ion-label>Settings</ion-label>
+      <ion-label>Memories</ion-label>
     </ion-tab-button>
 
   </ion-tab-bar>
