--- a/frontend/src/app/pages/submit/submit.page.html
+++ b/frontend/src/app/pages/submit/submit.page.html
@@ -8,17 +8,17 @@
   <ion-grid>
     <ion-row>
       <ion-col style="justify-content: center;" size="6" offset="3">
-        <form (ngSubmit)="submit()">
+        <form #submitForm="ngForm" novalidate>
           <ion-header>
             <ion-title>
-              Register
+              Submit a memory
             </ion-title>
-          </ion-header>
+          </ion-header> 
           <ion-item>
               <ion-label>Message</ion-label>
-              <ion-textarea aria-placeholder="Enter message here..."></ion-textarea>
+              <ion-textarea required name="message" [(ngModel)]="memory.message" aria-placeholder="Enter message here..."></ion-textarea>
           </ion-item>
-          <ion-button ion-button type="submit" block>Submit</ion-button>
+          <ion-button ion-button (click)="submit(submitForm)" block>Submit</ion-button>
       </form>
       </ion-col>
     </ion-row>
