--- a/frontend/src/app/pages/layout/layout.page.html
+++ b/frontend/src/app/pages/layout/layout.page.html
@@ -1,14 +1,19 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
 
-    <ion-tab-button>
+    <ion-tab-button tab="submit">
       <ion-icon></ion-icon>
       <ion-label>Submit</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button>
+    <ion-tab-button tab="messages"> 
       <ion-icon></ion-icon>
-      <ion-label>Memories</ion-label>
+      <ion-label>Messages</ion-label>
+    </ion-tab-button>
+    
+    <ion-tab-button tab="settings"> 
+      <ion-icon></ion-icon>
+      <ion-label>Settings</ion-label>
     </ion-tab-button>
 
   </ion-tab-bar>
