--- a/frontend/src/app/pages/settings/settings.page.html
+++ b/frontend/src/app/pages/settings/settings.page.html
@@ -14,6 +14,10 @@
         <ion-select-option value="yearly">Yearly</ion-select-option>
       </ion-select>
     </ion-item>
+    <ion-item>
+      <ion-label>Signout</ion-label>
+      <ion-button (click)="signout()"  >Sign out</ion-button>
+    </ion-item>
   </ion-list>
 
 </ion-content>
