--- a/frontend/src/app/pages/login/login.page.scss
+++ b/frontend/src/app/pages/login/login.page.scss
@@ -1,3 +1,11 @@
 #login-form {
     margin-top: 30%;
 }
+
+.heading {
+    display: flex;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    font-size: 3em;
+}
