--- a/frontend/src/app/pages/settings/settings.page.html
+++ b/frontend/src/app/pages/settings/settings.page.html
@@ -6,14 +6,14 @@
 
 <ion-content>
   <ion-list>
-    <ion-item>
+    <!-- <ion-item>
       <ion-label>Hold messages for:</ion-label>
       <ion-select (ionChange)="setHoldMessages()">
         <ion-select-option value="never">Weekly</ion-select-option>
         <ion-select-option value="monthly">Monthly</ion-select-option>
         <ion-select-option value="yearly">Yearly</ion-select-option>
       </ion-select>
-    </ion-item>
+    </ion-item> -->
     <ion-item>
       <ion-label>Signout</ion-label>
       <ion-button (click)="signout()"  >Sign out</ion-button>
