--- a/frontend/src/app/pages/messages/messages.page.html
+++ b/frontend/src/app/pages/messages/messages.page.html
@@ -7,7 +7,7 @@
 <ion-content>
   <ion-list>
     <ion-item *ngFor="let message of messages">
-      <p>{{message.messageText}}</p>
+      <p>{{message.submissionDate}} | {{message.messageText}}</p>
     </ion-item>
   </ion-list>
 </ion-content>
