--- a/frontend/src/app/pages/login/login.page.html
+++ b/frontend/src/app/pages/login/login.page.html
@@ -2,14 +2,14 @@
 <ion-content>
   <ion-grid>
     <ion-row>
-      <ion-col size="4" offset="4">
-        <ion-title class="heading">
+      <ion-col size-lg="4" offset-lg="4" size-sm="10" offset-sm="2" size-md="8" offset-md="4">
+        <ion-title >
           <div>Everyday</div><div>Memories</div>
         </ion-title>
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col size="4" offset="4" >
+      <ion-col size-lg="4" offset-lg="4" size-sm="10" offset-sm="2" size-md="8" offset-md="4">
         <form #loginForm="ngForm" novalidate>
           <ion-header>
             <ion-title>
