--- a/frontend/src/app/pages/register/register.page.html
+++ b/frontend/src/app/pages/register/register.page.html
@@ -1,8 +1,15 @@
 <ion-content>
   <ion-grid>
     <ion-row>
+      <ion-col size-lg="4" offset-lg="4" size-sm="10" offset-sm="2" size-md="8" offset-md="4">
+        <ion-title >
+          Everyday Memories
+        </ion-title>
+      </ion-col>
+    </ion-row>
+    <ion-row>
       <ion-col size="4" offset="4" >
-        <form id="register-form" (ngSubmit)="register()">
+        <form (ngSubmit)="register()">
             <ion-header>
               <ion-title>
                 Register
